[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "striker-polymarket-api"
version = "0.1.0"
description = "Uma biblioteca robusta e de alta performance para extração e análise de dados da Polymarket."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "enzoustk" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.0.0",
    "pandas>=1.3.0",
    "pytz",
]

[project.urls]
"Homepage" = "https://github.com/enzoustk/striker_polymarket_api"

[tool.setuptools.packages]
find = {}